2000-01-17  Drew Moseley  <dmoseley@cygnus.com>

	* cygwin/configure.in: Fixed bug in setting of shell variable which
	caused it to be interpreted as a subcommand rather than a variable.
	* cygwin/configure: Regenerated.

1999-11-09  DJ Delorie  <dj@cygnus.com>

	* cygwin/*: redone with automake for cygwin-specific info (from cgf)
	to support cross-host builds

1999-10-26  DJ Delorie  <dj@cygnus.com>

	* cygwin/*: new; replicate unix/* setup (other modules look
	in unix/* for "local" builds; we don't want them to find the
	cygwin version)
	* unix/Makefile.in: undo
	* configure.in: For cygwin, build win and cygwin
	* Makefile.in: re-enable multi-dir support

Tue Oct 26 13:16:09 1999  Christopher Faylor <cgf@cygnus.com>

	* win/configure.in: Add better detection of cross-compilation
	environment.
	* win/configure: Regenerate.

1999-10-20  DJ Delorie  <dj@cygnus.com>

	* Makefile.in: temporarily disable second subdirectory

1999-10-19  DJ Delorie  <dj@cygnus.com>

	* Makefile.in: support two subdirectories
	* configure[.in]: for Cygwin, build both win and unix variants
	* generic/tclEnv.c: include windows.h for cygwin
	* generic/tclPort.h: If building the unix variant for cygwin,
	pretend we're a unix machine instead of a windows machine.
	* unix/Makefile.in: don't list -lc; it breaks on cygwin.
	* unix/tclUnixFCmd.c: don't support fifos on cygwin

1999-08-05  DJ Delorie  <dj@cygnus.com>

	* win/tclWinInit.c (TclPlatformInit): add tcl_pkgPath hack

1999-05-18  Fred Fish  <fnf@cygnus.com>

	* generic/tclPosixStr.c	(Tcl_ErrnoId): Avoid duplicate case when
	ENOTSUP and EOPNOTSUPP are defined to the same thing.
	(Tcl_ErrnoMsg): Ditto.

Fri Feb 26 17:40:55 1999  Geoffrey Noer  <noer@cygnus.com>

        * win/configure.in: change "cygwin32*" to "cygwin*"
        * win/configure: Regenerated.
        * configure.in: Change "cygwin32*" to "cygwin*"
        * configure: Regenerate.

1999-02-11  Syd Polk  <spolk@cygnus.com>
