@@ -23,9 +23,9 @@
 
 /* On cygwin32, the environment is imported from the cygwin32 DLL.  */
 
-extern char ***__imp___cygwin_environ;
+extern char ***_imp____cygwin_environ;
 
-#define environ (*__imp___cygwin_environ)
+#define environ (*_imp____cygwin_environ)
 
 /* We need to use a special putenv function to handle PATH.  */
 #ifndef USE_PUTENV
