@@ -62,7 +62,7 @@ BOOL APIENTRY		DllMain _ANSI_ARGS_((HINSTANCE hInst,
 /* cygwin32 requires an impure pointer variable, which must be
    explicitly initialized when the DLL starts up.  */
 struct _reent *_impure_ptr;
-extern struct _reent *__imp_reent_data;
+extern struct _reent *_imp__reent_data;
 #endif
 /* END CYGNUS LOCAL */
 
@@ -122,7 +122,7 @@ DllMain(hInst, reason, reserved)
 #ifdef __CYGWIN32__
     /* cygwin32 requires the impure data pointer to be initialized
        when the DLL starts up.  */
-    _impure_ptr = __imp_reent_data;
+    _impure_ptr = _imp__reent_data;
 #endif
     /* END CYGNUS LOCAL */
 
