@@ -1,3 +1,9 @@
+2000-01-26  DJ Delorie  <dj@cygnus.com>
+
+	* win/tclWin32Dll.c (DllMain): Use standard _imp__reent_data,
+	not old-style __imp_reent_data
+	* generic/tclEnv.c (environ): ditto for _imp____cygwin_environ
+
 2000-01-17  Drew Moseley  <dmoseley@cygnus.com>
 
 	* cygwin/configure.in: Fixed bug in setting of shell variable which
